# talking_agents

./: .env.template  .gitignore  LICENSE  README.md  mixer_settings.yaml  pyproject.toml
assets/: .gitignore  radio-sound-macro.txt
docs/: mainFSM.drawio  post_processingFSM.drawio  prepareFSM.drawio
episode_configs/: episode_1.yaml  episode_10.yaml  episode_11.yaml  episode_12.yaml  episode_2.yaml  episode_3.yaml  episode_4.yaml  episode_5.yaml  episode_6.yaml  episode_7.yaml  episode_8.yaml  episode_9.yaml
episode_configs/personas/: guest_sandra.yaml  host_frank.yaml
episodes/: episode_10_en.md  episode_11_en.md  episode_12_en.md  episode_1_en.md  episode_2_en.md  episode_3_en.md  episode_4_en.md  episode_5_en.md  episode_6_en.md  episode_7_en.md  episode_8_en.md  episode_9_en.md
few_shot_examples/: question_rephrase_examples.yaml  questions_to_avoid.yaml
src/talking_agents/: create.py  main.py  settings.py
src/talking_agents/common/: __init__.py  azure_speech_engine.py  document_store.py  episode_config.py  few_shot_examples.py  interface_speech_engine.py  languages.py  persona.py  textwrap.py  vector_store.py
src/talking_agents/document/: section.py
src/talking_agents/graph/: __init__.py  interface_node.py
src/talking_agents/graph/answer_question/: __init__.py  answer_question_graph.py  answer_question_state.py
src/talking_agents/graph/common/: __init__.py  interview_content.py  post_processing_content.py  preparation_content.py  prompt.py  setup.py  (+2 more)
src/talking_agents/video_processing/: audacity.py  audio_mixer.py  video_mixer.py
(+116 files in other folders)
